--- a/app/views/propostas/new.html.erb
+++ b/app/views/propostas/new.html.erb
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <!-- Custom CSS -->
-  <%= stylesheet_link_tag 'propostas', 'data-turbo-track': 'reload' %>
+  <%#= stylesheet_link_tag 'propostas', 'data-turbo-track': 'reload' %>
 </head>
 
 <body class="proposta-page">
